# GroundProof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yaml
corpus/: python-whatsnew-3.10.json  python-whatsnew-3.11.json  python-whatsnew-3.12.json  python-whatsnew-3.13.json  python-whatsnew-3.14.json  python-whatsnew-3.8.json  python-whatsnew-3.9.json
datasets/: ab_compression.jsonl  temporal_golden.jsonl
demo/: __init__.py  app.py  app_runners.py  ask.py  env.py  offline_model.py
groundproof/: __init__.py  cockpit.py  errors.py
groundproof/compress/: __init__.py  pruner.py
groundproof/evals/: __init__.py  __main__.py  ab.py  temporal.py
groundproof/grading/: __init__.py  grader.py
groundproof/ingest/: __init__.py  __main__.py  chunker.py  corpus_io.py  fetch.py  models.py
groundproof/retrieval/: __init__.py  chroma_store.py  embeddings.py  indexing.py  store.py  supersedence.py  temporal.py
groundproof/steps/: __init__.py  compress.py  grade.py  pipeline.py  reformulate.py  retrieve.py  route.py  state.py  synthesize.py  web_search.py
tests/: test_ab_harness.py  test_app_smoke.py  test_chunker.py  test_compressor.py  test_corrective_spine.py  test_demo_and_cockpit.py  test_demo_app.py  test_embeddings.py  test_grader.py  test_ingest_fetch.py  test_ingest_models.py  test_scaffold.py  test_supersedence.py  test_temporal.py  test_temporal_evals.py  test_vector_store.py
